<resources>
    <string name="app_name">风月读书</string>
    <string name="app_name_debug">风月读书.debug</string>
    <string name="bookshelf">书架</string>
    <string name="last_read">上次阅读</string>
    <string name="anti_hijacking_tips_home">风月读书切换至后台运行</string>
    <string name="anti_hijacking_tips">风月读书切换至后台运行，当前风月读书所有，请注意！</string>
    <string name="sys_file_provider">xyz.fycz.myreader.fileprovider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">日间</string>
    <string name="night">夜间</string>
    <string name="chapter_list">目录</string>
    <string name="book_mark_list">书签</string>
    <string name="delete_all_book_mark">删除全部</string>
    <string name="positive_sort">正序</string>
    <string name="inverted_sort">倒序</string>
    <string name="font_using">正在使用</string>
    <string name="font_change">更换字体</string>
    <string name="font_select">选择字体</string>
    <string name="font_select_tip">"未找到本地字体，请将字体文件移至FYReader/font文件夹下(如果该文件夹不存在，请自行创建该文件夹或下载一个字体后自动创建文件夹)"</string>
    <string name="font_example">月</string>
    <string name="font_use">立即使用</string>
    <string name="font_download">立即下载</string>
    <string name="font">字体</string>
    <string name="tip">提示</string>
    <string name="download_no_add_tips">缓存书籍需要先加入书架，您确定要添加本书到书架吗？</string>
    <string name="download_already_all_tips">所选章节已经全部缓存！</string>
    <string name="disclaimer">免责声明</string>
    <string name="statement">声明：小说数据全部从网络获取，软件不提供或保存任何小说，详情请参考免责声明：</string>
    <string name="all_cathe_tip">说明：1、书籍缓存的章节是从历史阅读章节到最新章节！\n\n2、书源为品书网的书籍因网站原因无法一键缓存！\n\n确定要一键缓存？"</string>
    <string name="match_chapter_tip">功能背景：由于不同书源的章节数量不一定相同，换源后历史阅读章节可能出错！
        \n\n功能介绍：软件采用智能匹配历史章节的算法，可在书籍换源后为您自动匹配历史阅读章节！
        \n\n功能设置：您可在设置界面开启/关闭此功能(默认关闭)，并可更改智能匹配度。
        \n\n智能匹配度：智能匹配度是将历史阅读章节标题与换源后章节目录各个章节标题进行相似度比较的阈值，默认为0.7，智能匹配度越高，匹配越精确，但匹配成功率越低。
        \n\n注：匹配算法不能保证100%匹配正确
    </string>
    <string name="change_source_tip1">换源成功，由于不同书源的章节数量不一定相同，换源后历史阅读章节可能出错！
        \n\n注：您已开启历史章节智能匹配功能，将为您自动匹配历史阅读章节(匹配算法不能保证100%匹配正确)，是否匹配成功请查看提示！
    </string>
    <string name="change_source_tip2">换源成功，由于不同书源的章节数量不一定相同，换源后历史阅读章节可能出错！
        \n\n注：软件提供了智能匹配历史章节功能，您可在设置界面开启！
    </string>
    <string name="top_sort_tip">"%1$s数据来自非书源网站，进入书籍详情时需要从书源搜索，部分书籍(特别是新书)可能无法搜索到！\n注：初次加载时速度可能较慢，请耐心等待！"</string>
    <string name="menu_book_Top">移至顶部</string>
    <string name="menu_book_detail">书籍详情</string>
    <string name="menu_book_download">缓存书籍</string>
    <string name="menu_book_cache">导出缓存</string>
    <string name="menu_book_delete">删除书籍</string>
    <string name="menu_bookcase_edit">编辑书架</string>
    <string name="menu_bookcase_style">切换布局</string>
    <string name="menu_bookcase_add">本地导入</string>
    <string name="menu_bookcase_syn">同步书架</string>
    <string name="menu_bookcase_download_all">一键缓存</string>
    <string name="menu_settings">应用设置</string>
    <string name="menu_bookcase_backup">备份/恢复</string>
    <string name="menu_bookcase_about">关于应用</string>
    <string name="menu_backup_backup">备份</string>
    <string name="menu_backup_restore">恢复</string>
    <string name="menu_backup_webBackup">从本地同步至网络</string>
    <string name="menu_backup_webRestore">从网络同步至本地</string>
    <string name="menu_backup_autoSyn">每日自动同步：</string>
    <string name="change_source">换源</string>
    <string name="end_page_tip">已经是最后一页了</string>
    <string name="share">分享</string>
    <string name="share_text">发现了一款非常好用的小说App「风月读书」，绿色健康、无广告，而且完全开源不收费，实在是太赞了! 推荐~：</string>
    <string name="stop_download_tip">停止</string>
    <string name="text_login">登录</string>
    <string name="tv_register">新用户注册</string>
    <string name="tv_forget_pwd">忘记密码</string>
    <string name="et_password_tip">请输入密码</string>
    <string name="et_new_password_tip">请输入新密码</string>
    <string name="et_email">请输入邮箱</string>
    <string name="et_rp_captcha">请输入验证码</string>
    <string name="et_email_captcha">请输入邮箱验证码</string>
    <string name="et_account_tip">请输入用户名/邮箱</string>
    <string name="text_register">注册</string>
    <string name="text_agreement_tip">我已阅读并同意《<a href="https://shimo.im/docs/RgkDpd3D3Gp6t3rD">用户服务协议</a>》</string>
    <string name="add_book_mark">添加书签</string>
    <string name="share_app">分享软件</string>
    <string name="update_log">更新日志</string>
    <string name="git_hub">GitHub</string>
    <string name="share_log">分享崩溃日志</string>
    <string name="this_github_url">https://github.com/fengyuecanzhu/FYReader</string>
    <string name="plugin_version">插件版本：%s</string>
    <string name="update">检查更新</string>
    <string name="thanks">致谢名单</string>
    <string name="join_qq_channel">加入QQ频道</string>
    <string name="file_sub_count">%1$d 项</string>
    <string name="file_path">存储卡:%1$s</string>
    <string name="file_add_shelf">加入书架</string>
    <string name="file_add_shelves">加入书架(%1$d)</string>
    <string name="file_add_succeed">成功添加%1$d本书</string>
    <string name="menu_change_source">更换书源</string>
    <string name="menu_reload">重新加载</string>
    <string name="menu_open_link">打开链接</string>
    <string name="menu_is_update">启用更新</string>
    <string name="volume_turn_page">音量键翻页</string>
    <string-array name="reset_screen_time">
        <item>跟随系统</item>
        <item>常亮</item>
        <item>1分钟</item>
        <item>3分钟</item>
        <item>5分钟</item>
    </string-array>
    <string name="read_setting">阅读设置</string>
    <string name="bookcase_setting">书架设置</string>
    <string name="change_source_setting">换源设置</string>
    <string name="auto_refresh">自动刷新</string>
    <string name="auto_refresh_tip">打开软件时自动更新书籍</string>
    <string name="match_chapters">历史章节智能匹配</string>
    <string name="match_chapters_sui">智能匹配度</string>
    <string name="cathe_setting">缓存设置</string>
    <string name="cathe_gap">章节缓存间隔</string>
    <string name="clear_cathe">清除缓存</string>
    <string name="download_all_tip">选择一键缓存的书籍</string>
    <string name="download_all">一键缓存</string>
    <string name="close_refresh">禁用更新</string>
    <string name="close_refresh_tip">选择禁用更新的书籍</string>
    <string name="other_setting">其他设置</string>
    <string name="open_store">开启书城</string>
    <string name="open_bookstore_tip">打开软件时开启书城</string>
    <string name="thread_setting">线程设置</string>
    <string name="disable_source">禁用书源</string>
    <string name="disable_source_tip">选择搜索时禁用的书源</string>
    <string name="loading_tip">正在加载...</string>
    <string name="loading_error">加载失败</string>
    <string name="menu_bookcase_search">搜索</string>
    <string name="novel_boy">男生小说</string>
    <string name="novel_girl">女生小说</string>
    <string name="common_search">搜索</string>
    <string name="theme_mode">主题模式</string>
    <string name="join_qq_group">加入QQ群</string>
    <string name="mine_feedback">建议反馈(QQ频道)</string>
    <string name="menu_change_group">分组切换</string>
    <string name="menu_group_man">分组管理</string>
    <string name="menu_group_setting">设置分组</string>
    <string name="thread_num">更新/搜索线程数</string>
    <string name="cur_thread_num">当前线程数：%1$d</string>
    <string name="newest_chapter">最新章节:%1$s</string>
    <string name="source_title_num">书源:%1$s  共%2$d个源</string>
    <string name="page_mode_COVER">覆盖</string>
    <string name="page_mode_SIMULATION">仿真</string>
    <string name="page_mode_SLIDE">滑动</string>
    <string name="page_mode_SCROLL">滚动</string>
    <string name="page_mode_NONE">无动画</string>
    <string name="page_mode_AUTO">自动翻页</string>
    <string name="lanzousKeyStart">lanzousKeyStart</string>
    <string name="downloadLink">downloadLink</string>
    <string name="qdCookie">qdCookie</string>
    <string name="searchSource">searchSource</string>
    <string name="synTime">synTime</string>
    <string name="curBookGroupId">curBookGroupId</string>
    <string name="curBookGroupName">curBookGroupName</string>
    <string name="lastRead">lastRead</string>
    <string name="threadNum">threadNum</string>
    <string name="isNightFS">isNightFS</string>
    <string name="isReadTopTip">isReadTopTip</string>
    <string name="isReadDownloadAllTip">isReadDownloadAllTip</string>
    <string name="webdav_url">WebDav 服务器地址</string>
    <string name="webdav_account">WebDav 账号</string>
    <string name="webdav_password">WebDav 密码</string>
    <string name="webdav_restore_tip">从WebDav恢复</string>
    <string name="webdav_setting">WebDav设置</string>
    <string name="webdav">WebDav</string>
    <string name="webdav_setting_tip">WebDav备份与恢复</string>
    <string name="menu_add_bookmark">添加书签</string>
    <string name="menu_copy_content">拷贝内容</string>
    <string name="read_tianlai">天籁小说</string>
    <string name="read_biquge44">笔趣阁44</string>
    <string name="read_pinshu">品书网</string>
    <string name="read_biquge">笔趣阁</string>
    <string name="read_qb5">全本小说</string>
    <string name="read_miqu">米趣小说</string>
    <string name="read_jiutao">九桃小说</string>
    <string name="read_miaobi">妙笔阁</string>
    <string name="read_dstq">丹书铁券</string>
    <string name="read_yunzhong">云中书库</string>
    <string name="read_sonovel">搜小说网</string>
    <string name="read_quannovel">全小说网</string>
    <string name="read_qiqi">奇奇小说</string>
    <string name="read_xs7">小说旗</string>
    <string name="read_du1du">读一读网</string>
    <string name="read_paiotian">飘天文学</string>
    <string name="read_laoyao">老幺小说</string>
    <string name="read_xingxing">星星小说</string>
    <string name="read_shiguang">时光小说</string>
    <string name="read_rexue">热血小说</string>
    <string name="read_chuanqi">传奇小说</string>
    <string name="read_xiagu">峡谷文学</string>
    <string name="read_hongchen">红尘小说</string>
    <string name="read_bijian">笔尖小说</string>
    <string name="read_yanqinglou">言情楼</string>
    <string name="read_wolong">卧龙小说</string>
    <string name="read_ewenxue">E文学</string>
    <string name="read_shuhaige">书海阁</string>
    <string name="download_book">缓存书籍</string>
    <string name="menu_share">分享书籍</string>
    <string name="save">保存</string>
    <string name="content_replace">内容替换</string>
    <string name="summary">概要</string>
    <string name="summary_tip">说明信息</string>
    <string name="replace_rule_old">替换前</string>
    <string name="replace_rule_old_tip">要替换的内容</string>
    <string name="replace_use_regex">使用正则</string>
    <string name="replace_rule_new">替换为</string>
    <string name="replace_rule_new_tip">替换后的内容</string>
    <string name="use_to_source">应用于书源</string>
    <string name="use_to_source_tip">默认将应用于所有书源</string>
    <string name="select">选择</string>
    <string name="use_to_book">应用于书籍</string>
    <string name="use_to_book_tip">默认将应用于所有书籍</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="add_rule">新建规则</string>
    <string name="export_all">导出所有</string>
    <string name="reverse_rule">反转规则可用性</string>
    <string name="delete_ban_rule">删除禁用规则</string>
    <string-array name="import_rule">
        <item>从剪切板导入</item>
        <item>从文件导入</item>
        <item>从网络导入</item>
    </string-array>
    <string name="hot_search">热搜</string>
    <string name="book_source_man">书源管理</string>
    <string name="select_all">全选</string>
    <string name="delete_ban_source">删除禁用书源</string>
    <string name="reverse_source">反转书源可用性</string>
    <string name="edit_mode">编辑模式</string>
    <string name="export_selected">导出选中</string>
    <string name="share_selected">分享选中</string>
    <string name="reverse_enable_selected">反转选中可用性</string>
    <string name="finish_edit">完成编辑</string>
    <string name="delete_selected">删除选中</string>
    <string name="reverse_selected">反选</string>
    <string name="share_all">分享所有</string>
    <string name="debug_search">测试搜索配置</string>
    <string name="debug_info">测试书籍详情</string>
    <string name="debug_toc">测试目录列表</string>
    <string name="debug_content">测试章节内容</string>
    <string name="debug">测试</string>
    <string name="menu_edit">编辑书籍</string>
    <string name="book_source">编辑书源</string>
    <string name="book_word_count">计算字数(实验)</string>
</resources>