<?xml version ="1.0" encoding ="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <item
            android:id="@+id/action_change_source"
            android:icon="@drawable/ic_change_source"
            android:title="@string/menu_change_source"
            app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_reload"
            android:icon="@drawable/ic_refresh"
            android:title="@string/menu_reload"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_open_link"
            android:icon="@drawable/ic_link"
            android:title="@string/menu_open_link"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_is_update"
            android:title="@string/menu_is_update"
            android:icon="@drawable/ic_enable"
            android:checkable="true"
            android:checked="true"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_group_setting"
            android:title="@string/menu_group_setting"
            android:icon="@drawable/ic_group"
            app:showAsAction="never"
            android:visible="false"/>
</menu>
