<?xml version ="1.0" encoding ="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_group_setting"
        android:icon="@drawable/ic_group"
        android:title="@string/menu_group_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_word_count"
        android:icon="@drawable/ic_wc"
        android:title="@string/book_word_count"
        app:showAsAction="ifRoom"/>
</menu>
