<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of FYReader.
  ~ FYReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ FYReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with FYReader.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Copyright (C) 2020 - 2022 fengyuecanzhu
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all" />
    <item
        android:id="@+id/action_reverse_selected"
        android:title="@string/reverse_selected" />

    <item
        android:id="@+id/action_reverse_enable_selected"
        android:title="@string/reverse_enable_selected" />

    <item
        android:id="@+id/action_delete_selected"
        android:title="@string/delete_selected" />

</menu>