<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of FYReader.
  ~ FYReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ FYReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with FYReader.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Copyright (C) 2020 - 2022 fengyuecanzhu
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_hot"
        android:title="@string/hot_search"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_disable_source"
        android:title="@string/disable_source"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_source_man"
        android:title="@string/book_source_man"
        app:showAsAction="never"/>

    <group android:id="@+id/source_group">

    </group>


</menu>